src/stylesheets/style.scss
@import "~uikit/dist/css/uikit.min.css";

/* */
:root {
    --selected-colour : #006fff; //Main colour for displaying the propertiesù
    --base-colour : #1749b3;
}


body {
    display: flex;
    flex-direction: column;
    height: 100vh;
    overflow-y: hidden;
}
div.block-infos {
    display: flex;
    flex-grow: 0;
    flex-direction: row;
    flex: 1;
    min-height: 200px;
    margin-bottom: 36px;
    margin-left: 10;
    margin-right: 10;
    background-color: #ffffff;
}
div.query-answer {
    display: flex;
    flex-grow: 0;
    flex-direction: column;
    margin-bottom: 50px;
    text-align: center;
    
    padding: 10px;
}

#query-card-container {
    overflow-x: scroll;
    overflow-y: scroll;
    outline: 1px solid var(--selected-colour);
}

#query-card-container > .uk-card {
    margin-top: 20px;
    margin-left: 10px;
    margin-right: 10px;
}

#query-card-container > .uk-card >.uk-card-body{
    text-align: left;
}

#query-header{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 0px;
}



.topnav {
    display: flex;

    background: #f0eeeece;
    
    margin-bottom: 10px;
  }
  
  /* Change the color of links on hover */
  .topnav a:hover {
    background-color: rgb(139, 9, 9);
    border-radius: 15px;
    color: black;
  }
  
  /* Style the search box inside the navigation bar */
  .topnav input[type=text] {
    display: block;
    padding: 10px;
    border: 2px black;
    margin-top: 8px;
    margin-bottom: 8px;
    margin-left: auto;
    margin-right: none;
    width: 35%;
    font-size: 14px;
    font-family: 'Roboto', Arial, sans-serif;
    border-radius: 15px 0 0 15px;
  }
  .topnav input[type=submit]{
    background:white;
    margin-right: 30%;
    margin-top: 8px;
    margin-bottom: 8px;
    color: grey;
    border-radius: 0 15px 15px 0;
    border-color: #f0eeeece;
    height: 40px;
    width: 60px;
    border: none;
    
    font: 14px arial, sans-serif;
    
    
    text-shadow:none;

  }
  
  /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
  @media screen and (max-width: 600px) {
    .topnav a, .topnav input[type=text] {
      float: none;
      display: block;
      text-align: left;
      width: 100%;
      margin: 0;
      padding: 14px;
    }
    .topnav input[type=text] {
      border: 1px solid #ccc;
    }
  }

.block-detail-container {
    overflow-y: scroll;
    padding: 8px;
    flex: 1;
}

.browse-container {
    overflow-y: scroll;
    padding: 8px;
    flex: 1;
    
}


.uk-tooltip {
    word-wrap: break-word;
  }


@media only screen and (max-width: 1000px) {
    div.block-infos {
        flex-direction: column;
    }
    div.block-detail-container {
        flex: none;
    }
    div.browse-container {
        flex: none;
    }
}

#progress-bar-container {
    align-self: center;
    flex-direction: row;
    width: 80%;
    
}

#progress-bar {
    height: 30px;
    z-index: 1;
    background-color: #4caf50;
}

#text-bar {
    position: relative;
    z-index: 2;
    padding: 10px;
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-size: 150%;
    text-align: center;
    color: black;
}

.load-container {   
    
    display: flex;
    flex-direction: column;
    align-content: center;
    background-color: rgb(255, 255, 255);
    color: black;
    min-height: 200px;
}

.div-load {
    top: 30%;
    align-self: center;
    align-content: center;
}



@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.blocks-container {
    display: flex;
    flex-direction:row;
    margin-bottom: 10;
    padding: 0 10px;
    
    
}


    
#last-container{
    display: flex;
    margin-left: 35px;
    background-color: white;
    animation: 2s ease-out 2s 1 slideInFromRight;
    background: white;
    animation-direction: reverse;
    border-left: 1px solid gray;
}


@keyframes slideInFromRight {
    0% {
      transform: translateX(0%);
    }
    100% {
      transform: translateX(100%);
    }
  }

.last-added{

    left: 0;
    
}



#svg-container {
    display: flex;
    flex-direction: row;
    flex: 90%;

   //padding-left: 30px;
    
 
  
}
::-webkit-scrollbar{
    widows: 25px;
}
::-webkit-scrollbar-track{

    border: 7px solid #232943;
    box-shadow:  inset 0 0 2.5px 2px rgba(0, 0, 0, 0.35);
}

::-webkit-scrollbar-thumb{
    background: pink;
    border-radius: 3px;
}

.uk-open {
    background-color: #ffffff;
}

.description {
    width: 30%;
    left: 50% !important;
    text-align: justify;
    text-justify: inter-word;
    transform: translateX(-50%);
}

.clickable-detail-block > li {
    padding: 10px;
}

.clickable-detail-block .uk-accordion-content p {
    overflow-x: auto;
}

.alert-container {
    position: absolute;
    top: 0%;
    left: 25%;
    width: 50%;
}

.alert {
    padding: 20px;
    background-color: #f44336;
    color: white;
    opacity: 1;
    transition: opacity 0.6s;
    margin-bottom: 15px;
}

.alert.other {
    background-color: rgb(0, 54, 14);
}

.alert.info {
    background-color: #2196f3;
}

.alert.warning {
    background-color: #ff9800;
}

.close-btn {
    margin-left: 15px;
    color: white;
    font-weight: bold;
    float: right;
    font-size: 20px;
    line-height: 20px;
    cursor: pointer;
    transition: 0.3s;
}

.close-btn:hover {
    color: black;
}

.cancel-button {
    display: inline-block;
    border: 0.16em solid rgba(255, 255, 255, 0);
    border-radius: 2em;
    padding: 10px;
    box-sizing: border-box;
    text-decoration: none;
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-size: 100%;
    color: #ffffff;
    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
    text-align: center;
    transition: all 0.2s;
    background-color: #0004e2;
    right : 10%;
}

#white-icon{
    filter: invert(100%) sepia(8%) saturate(2%) hue-rotate(87deg) brightness(115%) contrast(100%);
}

.spinner{
    margin: 0 auto;
    align-self: center;
    display: flex;
}

.cancel-button:hover {
    border-color: rgba(255, 255, 255, 1);
}

@media all and (max-width: 30em) {
    .cancel-button {
        display: block;
        margin: 0.2em auto;
    }
}

.logo {
    content: url(https://avatars2.githubusercontent.com/u/3638331?s=200&v=4);
    display: table;
    margin: 0 auto;
    width: 80px;
    height: 80px;
}

/*
footer from status.dedis.ch
*/

footer {
    bottom: 0;
    left: 0;
    width: 100%;
    z-index: 3;
    position: fixed;
    padding: 5px;
    font-size: 10px;
    text-align: center;
}

/*
List of classes for the new transaction container
*/


#block-detail-container{
    outline:  2px solid var(--selected-colour);
}


// #block-detail-field {
//     font-family: "Space Mono", monospace;
//     color: #ffffff;
// }
.uk-accordion > .uk-open {
    background-color: var(--selected-colour);
}

.uk-accordion-title:focus{
    color: #ffffff;
}

.uk-accordion-title::before{
    background-color : white
}

.uk-accordion {
    font-family: "Space Mono", monospace;
    background-color : var(--selected-colour);
    padding: 8px;
}

.uk-accordion * {
    color: #ffffff;

}


.uk-accordion-content > p {
    margin-left: 10px;
}

#rejected{
    color: red;
}


#forwardlink-drop{
    background-color: var(--base-colour);
    max-width: 80%;
}

.active {
    background-color: rgb(255, 255, 255);
}

.block-detail-container p {
    font-size: 16px;
    overflow: hidden;
}

.browse-container p {
    font-size: 16px;
}

.spinner {
    animation: rotate 2s linear infinite;
    transform-origin: 50%;
}

.spinner circle {
    stroke: rgb(140, 182, 224);
    stroke-linecap: round;
    animation: dash 1.5s ease-in-out infinite;
}

@keyframes rotate {
    100% {
        transform: rotate(360deg);
    }
}

.clip-blocky {
    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
}

@keyframes dash {
    0% {
        stroke-dasharray: 1, 150;
        stroke-dashoffset: 0;
    }
    50% {
        stroke-dasharray: 90, 150;
        stroke-dashoffset: -35;
    }
    100% {
        stroke-dasharray: 90, 150;
        stroke-dashoffset: -124;
    }
}

.header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 0 0px;



    img{
        
        color: #264473; 
       max-width: none;
       height: 70;
        
    }

    #status-info {
        .info {
            display: flex;
            flex-direction: row;
            align-items: center;
            justify-content: center;

            .loader-wrapper {
                width: 50px;
                height: 50px;
                position: relative;
            }

            .info-message {
                padding: 20px;
            }
        }
    }
}



.x-axis{
   text-anchor: start;
    
    line{
    
        stroke: #8C764A;
        
    }

    path{
       
        stroke: #8C764A;
        
    }
    
    text{
        fill: #8C764A;
    } 
}

